# mlfaker

./: Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  logging.yml  setup.cfg  setup.py
docker/: Dockerfile  docker-compose.yml
docsrc/: Makefile  conf.py  develop.md  index.rst
mlfaker/: demo_dynamics.py  generators.py  generators_test.py
mlfaker/scripts/: evaluate.py  evaluate_test.py  predict.py  predict_test.py  train.py  train_test.py
notebooks/: mocker-proposal.ipynb  poc-data-generators.ipynb  poc-graph-builder.ipynb
