[metadata]
version = attr: mlfaker.__version__
description = Run Commands 4 Me: Quickly and easily set up your run commands files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wiggums-analytics/mlfaker
project_urls =
    Bug Tracker = https://github.com/wiggums-analytics/mlfaker/issues

[bdist_wheel]
universal=1
